finished guide (i think)
its all done (i hope)


:crab: